# tarot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tarot/: __init__.py  core.py
tests/: test_package.py
